se avanza mas en los ejercicios y se modifican los test