@@ -8,6 +8,9 @@ import util.DataUtil;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /*
     Goal: Create a datastructure from the given data:
@@ -51,15 +54,20 @@ import java.util.Map;
     Output: the given datastructure
 */
 public class Kata10 {
-    public static List<Map> execute() {
-        List<Map> lists = DataUtil.getLists();
-        List<Map> videos = DataUtil.getVideos();
-
-
-
-        return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
-                ImmutableMap.of("id", 5, "title", "The Chamber"),
-                ImmutableMap.of("id", 3, "title", "Fracture")
-        )));
-    }
+        public static List<Map> execute() {
+            List<Map> lists = DataUtil.getLists();
+            List<Map> videos = DataUtil.getVideos();
+            return lists.stream()
+                    .map(pelicula ->
+                            Map.of("name", pelicula.get("name"),
+                                    "videos", videos.stream()
+                                            .filter(video -> Objects.equals(pelicula.get("id"), video.get("listId")))
+                                            .map(video -> Map.of("id", video.get("id"), "title", video.get("title"))
+                                            )
+                                            .collect(Collectors.toList())
+                            )
+                    )
+                    .collect(Collectors.toList());
+        }
 }
+
